--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>Epic</title>
-</head>
-
-<body>
-  <h1>Ago</h1>
-  <p>Epic paragraph</p>
-  
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>HTML Challenge</h1>
+    <hr>
+    <a href="https://developer.mozilla.org/en-US/">Link to MDN Documentation</a>
+    <table>
+      <tr>
+        <td>One</td>
+        <td>Two</td>
+      </tr>
+      <tr>
+        <td>Three</td>
+        <td>Four</td>
+      </tr>
+    </table>
+  </body>
 </html>
